# molfunc

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: catch2.yml  pytest.yml
dev/: README.md  build_linux_wheels.sh  build_mac_wheels.sh
examples/: PH3.xyz  README.md  benzene.xyz
ffunc/: __init__.py  atoms.py  bonds.py  exceptions.py  ffunc.py  functionalise.py  geom.py  molecule.xyz  molecules.py
molfunc/: CMakeLists.txt  __init__.py  atoms.py  bonds.py  energy.py  exceptions.py  fragments.py  geom.py  molecules.py  molfunc.py  molfunc.pyx  molfunc_ext.pyx  utils.py  wrappers.pyx
molfunc/common/: derivative.tex
molfunc/ext/: CMakeLists.txt  molfunc_ext.pyx
molfunc/ext/data/: Ac.xyz  CN.xyz  CO2Et.xyz  Me.xyz
molfunc/ext/include/: atoms.h  combined.h  fragments.h  graph.h  grid.h  molecules.h  rotation.cpp  rotation.h  species.h  utils.h  vector3d.h
molfunc/ext/include/species/: combined.h
molfunc/ext/src/: atoms.cpp  combined.cpp  fragments.cpp  graph.cpp  grid.cpp  molecules.cpp  rotation.cpp  species.cpp  utils.cpp  vector3d.cpp
molfunc/ext/src/data/: Boc.xyz  F.xyz
molfunc/ext/src/species/: combined.cpp  fragments.cpp  molecules.cpp  species.cpp
molfunc/ext/src/species/data/: Bn.xyz  Ms.xyz  iPr.xyz
molfunc/ext/tests/: test_atoms.cpp  test_combination.cpp  test_fragments.cpp  test_graphs.cpp  test_grid.cpp  test_molecule.cpp  test_rotation.cpp
molfunc/fragments_lib/: Br.xyz  CH2OH.xyz  CO2Me.xyz  Et.xyz  H.xyz  I.xyz  Mes.xyz  NH2.xyz  NMe2.xyz  NO2.xyz  OH.xyz  OMe.xyz  OPh.xyz  OtBu.xyz  Ph.xyz  generate_fragments.py
molfunc/include/: angles.h  atoms.h  graph.h  grid.h  rotation.h  utils.h  vector3d.h
molfunc/include/species/: combined.h  fragments.h  molecules.h  species.h
molfunc/scripts/: compile_fragments.py  generate_fragments_cpp.py
molfunc/src/: angles.cpp  atoms.cpp  graph.cpp  grid.cpp  rotation.cpp  vector3d.cpp
molfunc/src/species/: combined.cpp  fragments.cpp  molecules.cpp  species.cpp
molfunc/src/species/data/: Bz.xyz  CF3.xyz  Cl.xyz  TMS.xyz  Tf.xyz  generate_fragment_xyz.py  tBu.xyz
molfunc/tests/: test_combination.cpp  test_fragments.cpp  test_graphs.cpp  test_grid.cpp  test_molecule.cpp  test_rotation.cpp  test_utils.cpp
tests/: all_test.py  requirements.txt  test_atoms.py  test_bonds.py  test_cli.py  test_example.py  test_examples.py  test_fragments.py  test_geom.py  test_molecules.py
tests/data/: benzene.xyz  benzene_reordered.xyz  ethane.xyz  ethane_fragment.xyz  ethane_fragment_far.xyz  hydrocarbon.xyz  methyl.xyz  wrong_format_xyz_file.xyz
